* FIXED: Win32: Various issues in colour-handling.  Properly distinguish
  between palette usage and direct RGB, fixing colour distortion on
  high- and true-colour displays and added proper colormap support to
  the windows port of XPM 3.4k.

VERSION 5.1.0
=============

* LICENCE: GPL-2

* Integrated with SWI-Prolog 4.0.0 package building schema.

* FIXED: Avoid crash in Postscript generation from text-objects containing
  non-ISO characters.  Thanks to Matthias Trautner Kromann.

* INSTALL: Added NMAKE makefiles for building and installing in Windows.

* ADDED: SWI-Prolog GUI tracer to standard installation for SWI-Prolog.

VERSION 5.0.11
==============

* FIXED: PceEmacs: Prolog colourising could get into a loop.

* ADDED: Support for writing .GIF files

* ADDED: `date->advance', moving date objects forwards and backward
  in time.

* ADDED: `char_array <-base64_encode' and <-base64_decode supporting
  rfc-2045 conform base-64 encoding and decoding.

* FIXED: Crash in `graphical <-abolute_position' if the receiving
  graphical is not displayed on the provided device (now fails).

* ADDED: `pixmap <-convert' to deal with graphicals and files.  Graphicals
  used to be indirected over class image, resulting in a black-and-white
  pixmap after an unnecessary and expensive intermediate conversion. 

* MODIFIED: PceEmacs Prolog mode never to move the caret on automatic
  checking launced by typing a full-stop.  Also singleton-replace mode
  is now only activated on explicit request.

* MODIFIED: Call toc_window (from library(toc_window)) to use ->normalise
  on the window after expanding a node and to provide a horizontal scroll_bar
  by default.

* ADDED/FIXED: Proper support for long (word-)wrapped lines in class editor.
  This allows for normal modern `textarea' using `editor->wrap: word'.

* FIXED: Class key_binding to fetch <-saved_column on ->cursor_up and
  ->cursor_down.  MODIFIED: class key_binding now uses <-up_down_column